--- a/web/html/xui/form/protocol/vless.html
+++ b/web/html/xui/form/protocol/vless.html
@@ -1,54 +1,49 @@
 {{define "form/vless"}}
-<a-collapse activeKey="0" v-for="(client, index) in inbound.settings.vlesses.slice(0,1)" v-if="!isEdit">    
-    <a-collapse-panel header='{{ i18n "pages.inbounds.client" }}'>
-        {{template "form/client"}}
-    </a-collapse-panel>
-</a-collapse>
-<a-collapse v-else>
-  <a-collapse-panel :header="'{{ i18n "pages.client.clientCount"}} : ' + inbound.settings.vlesses.length">
-    <table width="100%">
-      <tr class="client-table-header">
-        <th>{{ i18n "pages.inbounds.email" }}</th>
-        <th>ID</th>
-      </tr>
-      <tr v-for="(client, index) in inbound.settings.vlesses" :class="index % 2 == 1 ? 'client-table-odd-row' : ''">
-        <td>[[ client.email ]]</td>
-        <td>[[ client.id ]]</td>
-      </tr>
-    </table>
-  </a-collapse-panel>
-</a-collapse>
-<template v-if="inbound.isTcp && !inbound.stream.isReality">
-    <a-form :colon="false" :label-col="{ md: {span:8} }" :wrapper-col="{ md: {span:14} }">
-        <a-form-item label="Fallbacks">
-            <a-button type="primary" size="small" @click="inbound.settings.addFallback()">+</a-button>
-        </a-form-item>
-    </a-form>
+<a-form layout="inline">
+    <a-form-item label="id">
+        <a-input v-model.trim="inbound.settings.vlesses[0].id"></a-input>
+    </a-form-item>
+    <a-form-item v-if="inbound.xtls" label="flow">
+        <a-select v-model="inbound.settings.vlesses[0].flow" style="width: 150px">
+            <a-select-option value="">无</a-select-option>
+            <a-select-option v-for="key in FLOW_CONTROL" :value="key">[[ key ]]</a-select-option>
+        </a-select>
+    </a-form-item>
+</a-form>
 
-    <!-- vless fallbacks -->
-    <a-form v-for="(fallback, index) in inbound.settings.fallbacks" :colon="false" :label-col="{ md: {span:8} }"
-        :wrapper-col="{ md: {span:14} }">
-        <a-divider style="margin:0;">
-            Fallback [[ index + 1 ]]
-            <a-icon type="delete" @click="() => inbound.settings.delFallback(index)"
-                style="color: rgb(255, 77, 79);cursor: pointer;" />
-        </a-divider>
-        <a-form-item label='SNI'>
-            <a-input v-model="fallback.name"></a-input>
-        </a-form-item>
-        <a-form-item label='ALPN'>
-            <a-input v-model="fallback.alpn"></a-input>
-        </a-form-item>
-        <a-form-item label='Path'>
-            <a-input v-model="fallback.path"></a-input>
-        </a-form-item>
-        <a-form-item label='Dest'>
-            <a-input v-model="fallback.dest"></a-input>
-        </a-form-item>
-        <a-form-item label='xVer'>
-            <a-input-number v-model="fallback.xver" :min="0" :max="2"></a-input-number>
-        </a-form-item>
-    </a-form>
-    <a-divider style="margin:5px 0;"></a-divider>
-</template>
+<a-form layout="inline">
+    <a-form-item label="fallbacks">
+        <a-row>
+            <a-button type="primary" size="small"
+                      @click="inbound.settings.addFallback()">
+                +
+            </a-button>
+        </a-row>
+    </a-form-item>
+</a-form>
+
+<!-- vless fallbacks -->
+<a-form v-for="(fallback, index) in inbound.settings.fallbacks" layout="inline">
+    <a-divider>
+        fallback[[ index + 1 ]]
+        <a-icon type="delete" @click="() => inbound.settings.delFallback(index)"
+                style="color: rgb(255, 77, 79);cursor: pointer;"/>
+    </a-divider>
+    <a-form-item label="name">
+        <a-input v-model="fallback.name"></a-input>
+    </a-form-item>
+    <a-form-item label="alpn">
+        <a-input v-model="fallback.alpn"></a-input>
+    </a-form-item>
+    <a-form-item label="path">
+        <a-input v-model="fallback.path"></a-input>
+    </a-form-item>
+    <a-form-item label="dest">
+        <a-input v-model="fallback.dest"></a-input>
+    </a-form-item>
+    <a-form-item label="xver">
+        <a-input type="number" v-model.number="fallback.xver"></a-input>
+    </a-form-item>
+    <a-divider v-if="inbound.settings.fallbacks.length - 1 === index"/>
+</a-form>
 {{end}}
